[package]
name = "tquest"
version = "0.2.0"
edition = "2021"
description = "Simple observable pattern implementation"
license = "MIT"
repository = "https://github.com/OkieOth/rs_tquest"
readme = "README.md"
keywords = ["cli", "questionnaire", "terminal"]
categories = ["command-line-utilities"]


[dependencies]
builder_m4cro = "0.3.1"
anyhow = "1.0.82"
colored = "2.1.0"
regex = "1.10.4"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
